# uni-agent-fabric

./: .gitignore  Dockerfile  IMPLEMENTATION_REQUIREMENTS.md  Makefile  PRD.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
config/mappings/: tenable.yaml
connectors/: __init__.py  aws_connector.py  crowdstrike_connector.py  splunk_connector.py  tenable_connector.py
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
monitoring/: prometheus.yml
src/: __init__.py  main.py
src/adapters/: __init__.py  base_adapter.py  slack_adapter.py  teams_adapter.py
src/common/: __init__.py  config.py  exceptions.py  logging.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx  Approvals.tsx  index.css
src/layer1_integration/: __init__.py  base_connector.py  circuit_breaker.py  connector_registry.py  scheduler.py  secrets_manager.py  webhooks.py
src/layer2_normalization/: __init__.py  ocsf_schema.py  strategies.py  transformer.py
src/layer3_moat/: __init__.py  contextualizer.py  graph_client.py
src/layer4_agentic/: __init__.py  approval_api.py  approvals.py  iac_parser.py  risk_scoring.py  state_machine.py
src/message_queue/: __init__.py  producer.py
src/onboarding/: __init__.py  api.py
tests/: __init__.py  test_connector.py  test_normalization.py  verify_hardening.py  verify_refactor.py
tests/fixtures/: sample_cfn.yaml
